# rfunge

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_wasm.sh
src/: capi.rs  interpreter.rs  ip.rs  lib.rs  main.rs  rfunge.h  wasm.rs
src/app/: env.rs  mod.rs  turt.rs
src/fungespace/: index.rs  mod.rs  paged.rs
src/interpreter/: instruction_set.rs  instructions.rs  ip.rs  mod.rs  motion.rs
src/interpreter/fingerprints/: BOOL.rs  FIXP.rs  FPDP.rs  FPRT.rs  FPSP.rs  FRTH.rs  HRTI.rs  JSTR.rs  LONG.rs  MODU.rs  NCRS.rs  NULL.rs  REFC.rs  ROMA.rs  SOCK.rs  TERM.rs  TURT.rs  mod.rs
tests/: test-interpreter.sh  test_examples.rs
tests/manual_tests/: REFC_fork.b98  TURT.b98  connect-test.b98  file_output.b98  httpquine.b98  input.uf  k.b98  kt.b98  ncrstest2.b98  termtest.b98  termtest2.b98  undef.b98
tests/test_cases/: BOOL.b98  BOOL.b98.expected  FIXP.b98  FIXP.b98.expected  FPDP.b98  FPDP.b98.expected  FPRT.b98  FPRT.b98.expected  FPSP.b98  FPSP.b98.expected  FRTH.b98  FRTH.b98.expected  HRTI.b98  HRTI.b98.expected  JSTR.b98  JSTR.b98.expected  LONG.b98  MODU.b98  MODU.b98.expected  MODU2.b98  MODU2.b98.expected  NULL.b98  NULL.b98.expected  REFC.b98  ROMA.b98  ROMA.b98.expected  almost_diagonal.b98  basic_arithmetic.b98  basic_arithmetic.b98.expected  cmp.b98  concurrent.b98  concurrent2.b98  concurrent2.b98.expected  file_input.b98  file_input.b98.expected  file_input2.b98  file_input2.b98.expected  flying.b98  gnirts_loops.b98  gnirts_loops.b98.expected  (+22 more)
webapp/: .gitignore  app.js  controller.js  editor.js  index.html  io-window.js  package.json  rfunge-common.js  rfunge.css  stack-window.js  turtle.js
www/: fungespace_edit.js  index.html  rfunge_wrapper.js  run_rfunge.js  style.css  wasm_io.js
