[package]
name = "rfunge"
version = "0.1.0"
authors = ["Thomas Jollans <tjol@tjol.eu>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Funge-98 interpreter"
repository = "https://github.com/tjol/rfunge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
divrem = "1.0"
num = "0.4"
clap = "2.33"
regex = "1.5"
unicode_reader = "1.0.1"
pkg-version = "1.0.0"
chrono = "0.4"
rand = "0.8"
hashbrown = "0.11.2"
sprintf = "0.1"

[dev-dependencies]
colored = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.53"
wee_alloc = "0.4.5"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
# console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
socket2 = "0.4.1"

[[test]]
name = "test_examples"
harness = false
