[package]
name = "rfunge"
version = "0.1.0"
authors = ["Thomas Jollans <tjol@tjol.eu>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Funge-98 interpreter"
repository = "https://github.com/tjol/rfunge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
turt-gui = ["glutin", "femtovg"]
default = ["turt-gui"]

[dependencies]
divrem = "1.0"
num = "0.4"
clap = "2.33"
regex = "1.5"
pkg-version = "1.0.0"
chrono = "0.4"
rand = "0.8"
hashbrown = "0.11.2"
sprintf = "0.1"
futures-lite = "1.12.0"
async-std = "1.10.0"

[dev-dependencies]
colored = "2.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.53"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.130", features = ["derive"] }
# console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = "0.4.1"
glutin = { version = "0.27.0", optional = true }
# future version: , features = ["glutin"]
femtovg = { version = "0.2.8", optional = true, default-features = false}
crossterm = "0.22.1"
ncurses = { version = "5.101", optional = true }

[[test]]
name = "test_examples"
harness = false
